# custom-cython-component

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
custom_component/: custom_component.pyx
