[metadata]
version = 0.0.1
author = Adriane Boyd
author_email = adrianeboyd@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
python_requires = >=3.6
install_requires =
    spacy>=3.2.0,<4.0.0

[options.entry_points]
spacy_factories =
    custom_component = custom_component.custom_component:make_custom_component

[bdist_wheel]
universal = false

[sdist]
formats = gztar
